@@ -1,5 +1,14 @@
 2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>
 
+	* data/baobab.glade:
+	* src/baobab-treeview.c: (on_tv_button_press):
+	* src/baobab-utils.c: (popupmenu_list), (popupmenu_list_search):
+	* src/baobab-utils.h:
+
+	Fixed: #339521
+
+2006-04-25  Fabio Marzocca  <thesaltydog@gmail.com>
+
 	* data/baobab.1: updated man page
 
 2006-04-23  Dennis Cranston  <dennis_cranston@yahoo.com>
